--- a/src/main/resources/templates/busquedaPropuesta.html
+++ b/src/main/resources/templates/busquedaPropuesta.html
@@ -21,12 +21,14 @@
 		<div th:replace="fragments/resultadoBusquedaPropuestas.html (resultadoBusqueda=${propuestas})"> </div>
 	</div>
 
-	<p id="mensajeInfo" th:text="${mensaje}" hidden></p>
 	<!-- Footer -->
 	<footer th:replace="fragments/navigation.html :: footer"></footer>
 	
 	<!-- Modal -->
 	<div th:replace="fragments/modal.html"></div>
+
+	<!-- Mensaje de informacion -->
+	<p id="mensajeInfo" th:text="${mensaje}" hidden></p>
 
 </body>
 
