--- a/src/main/resources/templates/modals/perfil.html
+++ b/src/main/resources/templates/modals/perfil.html
@@ -138,8 +138,8 @@
             <li th:each="propuesta : ${propuestas}" th:text="${propuesta.nombre}" class="propuestaAntigua" th:attr="data-id=${propuesta.id}"></li>
           </ul>
         </div>
-      </div> <!-- Hacer historial de propuestas con query en el modelo -->
-    
+      </div>
+      
 
       <!-- Nombre Perfil [EMPRESA] -->
       <div th:if="${modo} eq 'CREACION'" class="divCentrado" id="divNombreEmpresa" style="display:none">
@@ -171,14 +171,25 @@
           <!-- Seguidores-->
           <h2 class="w3-padding-24">Perfiles en redes sociales</h2>
 
-          <ul>
+          <ul class="w3-ul w3-card-4 divCentrado w3-center">
             <li th:each="perfil: ${perfilesRRSS}">
-            <span th:text="${perfil.nombre}"></span>
-              <span class="numeroseguidores" th:text="${perfil.numSeguidores}"></span>
+
+              <!-- Icono RRSS -->
               <img th:if="${perfil.rrss} eq 'Twitter'" src="img/twitter.png" width="20" />
               <img th:if="${perfil.rrss} eq 'Facebook'" src="img/facebook.png" width="20" />
               <img th:if="${perfil.rrss} eq 'Instagram'" src="img/instagram.png" width="20"/>
               <img th:if="${perfil.rrss} eq 'Youtube'" src="img/youtube.png" width="20" />
+
+              <!-- Nombre RRSS -->
+              <p th:if="${modo eq 'VISTA'}" th:text="${perfil.nombre}"></p>
+              <input th:if="${modo eq 'EDICION'}" type="text" th:value="${perfil.nombre}" th:name="${'nombre' + perfil.rrss}" placeholder="Nombre de la cuenta" 
+                min="1" max="20" class="w3-input w3-center">
+
+              <!-- Numero de seguidores-->
+              <span th:if="${modo eq 'VISTA'}" class="numeroseguidores" th:text="${perfil.numSeguidores}"></span>
+              <input th:if="${modo eq 'EDICION'}" type="number" th:value="${perfil.numSeguidores}" name="${'seguidores' + perfil.rrss}" placeholder="Nº de seguidores"  
+                min="0" class="w3-input w3-center">
+
             </li>
           </ul>
 
