--- a/src/main/resources/templates/negociacion.html
+++ b/src/main/resources/templates/negociacion.html
@@ -46,7 +46,7 @@
 
             <!--Contenido Chat -->
             <div id="contenidoChat"></div>
-            <input id="botonEnviar" type="text" placeholder="Introduzca su mensaje...">
+            <input id="botonEnviar" type="text" placeholder="Introduzca su mensaje..." hidden>
         </div>
 
       <!-- Mensaje de informacion -->
