--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -3,6 +3,8 @@
 <head>
 	<th:block th:replace="fragments/head.html :: header" />
 	<script src="js/inicio.js" type="text/javascript"></script>
+		<link rel="stylesheet" type="text/css" href="css/contrataciones.css">
+
 	<title>Influencing: Inicio</title>
 </head>
 
@@ -37,7 +39,7 @@
 
 			<!-- Boton publicar propuesta [EMPRESA] -->
 			<div th:if="${session.u.hasRole('EMPRESA')}" class="divBotonPublicar">
-				<button class="w3-btn btnColor w3-margin w3-display-bottomleft" id="botonCrearPropuesta">Crear propuesta</button>
+				<button class="w3-btn btnColor w3-margin" id="botonCrearPropuesta">Crear propuesta</button>
 			</div>
 		</div>
 
@@ -55,8 +57,8 @@
 				<div class="w3-container w3-pale-blue">
 					<p th:text="${mensaje.getDescripcion()}"></p>
 				</div>
-				<input class="w3-btn w3-dark-grey w3-margin eliminaNotificacion" type="submit" value="Eliminar mensaje" 
-					onclick="this.parentElement.style.display='none'"></input>
+				<input th:if="${mensaje.tipo eq 'VALORACION'}" class="w3-btn w3-dark-grey w3-margin muestraValoracion" th:attr="data-id=${mensaje.id}" type="submit" value="Ver valoración"></input>
+				<input class="w3-btn w3-dark-grey w3-margin eliminaNotificacionInicio" th:attr="data-id=${mensaje.id}" type="submit" value="Eliminar mensaje"></input>
 			</div>
 
 		</div>
@@ -64,17 +66,18 @@
 		<!-- Panel de propuestas recientes -->
 		<div class="w3-col s4 w3-container w3-light-grey w3-round-large w3-margin">
 
-			<h1><b>Propuestas recientes</b></h1>
+			<h1><b>Negociaciones recientes</b></h1>
 
 
-			<button class="w3-btn btnColor w3-margin" id="verTodasPropuestas" th:href="@{/busquedaPropuesta}">Ver todas las propuestas</button>
+			<button class="w3-btn btnColor w3-margin" id="verTodasPropuestas" th:href="@{/negociacion}">Ver todas las negociaciones</button>
 
 			<!-- Lista de propuestas -->
 			<div th:each="candidatura : ${candidaturas}" class="w3-container w3-blue-grey w3-round-large w3-margin">
-				<h3><b th:text="${candidatura.getPropuesta().getEmpresa().getNombre()}"></b></h3>
+				<h3 th:if="${session.u.hasRole('INFLUENCER')}"><b th:text="${candidatura.getPropuesta().getEmpresa().getNombre()}"></b></h3>
+				<h3 th:if="${session.u.hasRole('EMPRESA')}"><b th:text="${candidatura.getCandidato().getNombre()}"></b></h3>
 				<p th:text="${#temporals.format(candidatura.getPropuesta().getFechaSubida(), 'dd/MM/yyyy')}"></p>
 				<div class="w3-container w3-pale-blue">
-					<p th:text="${candidatura.getPropuesta().getDescripcion()}"></p>
+					<p th:text="${candidatura.getPropuesta().getNombre() + ': ' + candidatura.getPropuesta().getDescripcion()}"></p>
 				</div>
 				<input class="w3-btn w3-dark-grey w3-margin btnVerPropuesta" type="submit" th:attr="data-id=${candidatura.propuesta.id}" value="Ver la propuesta"></input>
 			</div>
