Arreglado el footer

--- a/src/main/resources/templates/administracion.html
+++ b/src/main/resources/templates/administracion.html
@@ -18,7 +18,7 @@
     <main>
 
         <!-- Barra de Navegacion de Administracion -->
-        <div class="principal">
+        <div class="principal content">
             <div class="subheader">
                 <div class="enlaces">
                     <a id="influencerAdmin" class="category">Influencers</a>
