--- a/src/main/resources/templates/busquedaPerfil.html
+++ b/src/main/resources/templates/busquedaPerfil.html
@@ -17,7 +17,7 @@
 	</header>
 
 	<!-- Resultado busqueda de perfiles -->
-	<div id="divPerfiles">
+	<div id="divPerfiles" class="content">
 		<div th:replace="fragments/resultadoBusquedaPerfiles.html (resultadoBusqueda=${usuarios})"> </div>
 	</div>
 	<!-- Footer -->
