--- a/src/main/resources/templates/busquedaPropuesta.html
+++ b/src/main/resources/templates/busquedaPropuesta.html
@@ -17,7 +17,7 @@
 	</header>
 	
 	<!-- Resultado busqueda de propuestas -->
-	<div id ="divPropuestas">
+	<div id ="divPropuestas" class="content">
 		<div th:replace="fragments/resultadoBusquedaPropuestas.html (resultadoBusqueda=${propuestas})"> </div>
 	</div>
 
