--- a/src/main/resources/templates/contrataciones.html
+++ b/src/main/resources/templates/contrataciones.html
@@ -17,7 +17,7 @@
 	</header>	
 
 	<!-- Contrataciones -->
-	<div id ="divContrataciones">
+	<div id ="divContrataciones" class="content">
 		<div th:replace="fragments/resultadoBusquedaContrataciones.html"> </div>
 	</div>
 
