--- a/src/main/resources/templates/negociacion.html
+++ b/src/main/resources/templates/negociacion.html
@@ -16,7 +16,8 @@
     </header>
 
     <!-- Contenido chat de negociacion -->
-    <div class="contenido-negociacion">
+    
+	<div class="contenido-negociacion content">
 
         <!-- Lista de chats -->
         <div class="lista">
@@ -53,7 +54,8 @@
 	  <p th:text="${mensaje}" id="mensajeInfo" hidden></p>
 
     </div>
-
+	
+	
     <!-- Footer -->
     <footer th:replace="fragments/navigation.html :: footer"></footer>
     
