--- a/src/main/resources/templates/negociacion.html
+++ b/src/main/resources/templates/negociacion.html
@@ -40,16 +40,25 @@
                     <a class="perfil"></a>
                     <a class="nombre"></a>
                 </div>
-                <div class="ultimatum">
-                    <button class="w3-btn w3-black w3-margin" id="botonUltimatum">Enviar Ultimatum</button>
+                <div class="ultimatum divFlex">
+
+                    <form th:action="@{/propuesta/eliminaCandidatura}"> 
+						<button class="w3-btn w3-red w3-margin" id="eliminaNegociacion" type="submit" name="idCandidatura">Eliminar negociación</button> 
+					</form>
+                    <button class="w3-btn w3-black w3-margin" id="botonUltimatum">Enviar ultimátum</button>
                 </div>
             </div>
 
             <!--Contenido Chat -->
-            <div id="contenidoChat"></div>
+            <div id="contenidoChat">
+
+				<h2 th:if="${#lists.isEmpty(candidaturas)}" class="divCentrado"> No tienes conversaciones</h2>
+			</div>
             <input id="botonEnviar" type="text" placeholder="Introduzca su mensaje..." hidden>
         </div>
 
+
+		
       <!-- Mensaje de informacion -->
 	  <p th:text="${mensaje}" id="mensajeInfo" hidden></p>
 
