--- a/src/main/resources/templates/modals/perfil.html
+++ b/src/main/resources/templates/modals/perfil.html
@@ -88,7 +88,7 @@
       <!-- Tags [ADMIN no tiene] -->
       <div class="w3-center" th:if="${modo eq 'VISTA' and !usuario.hasRole('ADMIN')}">
 			<h2>Tags relacionados con el perfil</h2>
-          <button th:each="i : ${#strings.listSplit(usuario.tags, ',')}" class="w3-button w3-white tags" th:text="${i}" style="border-radius:12px;">Tags</li>
+          <p th:each="i : ${#strings.listSplit(usuario.tags, ',')}" class="w3-button w3-white tags" th:text="${i}">Tags</p>
       </div>
 
       <div class="tags-perfil" th:unless="${modo eq 'VISTA'  or (modo eq 'EDICION' and usuario.hasRole('ADMIN'))}">
@@ -117,13 +117,13 @@
       <!-- Valoracion (VISTA, EDICION) [ADMIN no tiene] -->
       <div class="divCentrado" th:if="${(modo eq 'VISTA' or modo eq 'EDICION') and !usuario.hasRole('ADMIN')}">
           <h2>Valoración media</h2>
-          <div class="score" th:if="${usuario.score!=null}">
+          <div class="score" th:if="${usuario.numContrataciones!=0}">
             <th:block th:each="i: ${#numbers.sequence(1, usuario.score)}">					
               <i class="fa fa-star w3-margin estrella"></i>
             </th:block>
             <i th:if="${#strings.substring(usuario.score,2) >= '5'}" class="fa fa-star-half-alt w3-margin estrella"></i>
           </div>
-          <div class="score" th:if="${usuario.score == null}">
+          <div class="score" th:if="${usuario.numContrataciones == 0}">
             <p>No tiene valoraciones aun</p>
           </div>
       </div>
@@ -172,7 +172,7 @@
           <h2 class="w3-padding-24">Perfiles en redes sociales</h2>
 
           <ul class="w3-ul w3-card-4 divCentrado w3-center">
-			<p th:if="${ #lists.isEmpty(perfilesRRSS)}"> No hay perifles </p>
+			<p th:if="${ #lists.isEmpty(perfilesRRSS)}"> No hay perfiles </p>
             <li th:each="perfil: ${perfilesRRSS}">
 
               <!-- Icono RRSS -->
@@ -263,7 +263,7 @@
     </form>
 
     <!-- Boton Denunciar -->
-    <button th:if="${modo} eq 'VISTA'" class="w3-display-topright" id="btnDenunciar" th:attr="data-id=${usuario.id}">Denunciar</button>
+    <button th:if="${modo eq 'VISTA' and !session.u.hasRole('ADMIN') and !(session.u.getId() == usuario.id)}" class="w3-display-topright" id="btnDenunciar" th:attr="data-id=${usuario.id}">Denunciar</button>
 
   </div>
 
